deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-app
  template:
    metadata:
      labels:
        app: flask-app
    spec:
      containers:
        - name: flask
          image: registry.access.redhat.com/ubi9/python-39
          command:
            - python3
            - -c
            - |
              from flask import Flask
              app = Flask(__name__)
              
              @app.route('/')
              def home():
                  return '<h1>Hello Flask V1</h1>'
              
              app.run(host='0.0.0.0', port=8080)
          ports:
            - containerPort: 8080
